2002-10-16  Ross Burton  <ross@burtonini.com>

	* Makefile.am (Develdir): Use the new location for .desktop files.

	* devhelp.desktop.in: Add Encoding and Categories tags.

2002-10-01  Peteris Krisjanis <peteris.krisjanis@os.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS

2002-09-19  Christian Neumair  <chris@gnome-de.org>

	* ui/devhelp2.glade: Made info_dialog HIG-compliant.

2002-08-31  James Henstridge  <james@daa.com.au>

	* src/dh-window.c (window_populate): set scrolled window policy to
	automatic, so scrollbars don't display if not needed.

2002-08-28  Gustavo Noronha Silva  <kov@debian.org>

	* configure.in (ALL_LINGUAS): new translation, pt_BR,
	thanks to "Alexandre Folle de Menezes" <afmenez@terra.com.br>

2002-08-20  James Henstridge  <james@daa.com.au>

	* devhelp.desktop.in (Exec): fix up desktop file.

2002-08-12  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-window.c (window_cmd_about_cb): cleaned up about dialog.

	* src/dh-controller.c: book-index -> dh-book-tree.

	* src/dh-book-parser.[ch]: Added

	* src/dh-profile.[ch]: Added
	
	* src/dh-book-tree.[ch]: 
	* src/book-index.[ch]: book-index.[ch] moved to dh-book-tree.[ch]

	* src/Makefile.am: 
	- book-index -> dh-book-tree.
	- added dh-book-parser.[ch]
	- added dh-profile.[ch]

	* idl/GNOME_DevHelp.idl: BookIndex -> BookTree

2002-08-08  Mikael Hallendal  <micke@codefactory.se>

	* src/devhelp-controller.[ch]: changed to dh-controller.[ch]

	* src/devhelp-marshal.*: Changed to dh-marshal.*

	* src/devhelp-search.[ch]: Changed into dh-search.[ch]

	* src/util.[ch]: Changed into dh-util.[ch]

	* src/history.[ch]: Changed into dh-history.[ch]
	
	* src/devhelp-window.[ch]: Changed into dh-window.[ch]

	* src/devhelp-view.[ch]: Changed into dh-view.[ch]

	* src/dh-bookshelf.[ch]: 
	- Changed name from bookshelf.[ch]
	- Bookshelf -> DhBookshelf

	* src/Makefile.am:
	- Don't build install.[ch]
	- bookshelf.[ch] -> dh-bookshelf.[ch]
